[package]
authors = ["Js2xxx <akucxy@163.com>"]
categories = ["memory-management", "no-std", "concurrency"]
description = "A fast & lock-free memory allocator library"
documentation = "https://docs.rs/ferroc"
edition = "2021"
exclude = ["assets"]
homepage = "https://github.com/Js2xxx/ferroc"
keywords = ["allocator", "no_std", "memory", "heap", "lock-free"]
license = "MIT OR Apache-2.0"
name = "ferroc"
repository = "https://github.com/Js2xxx/ferroc"
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
base-mmap = ["dep:region"]
base-static = []
c = ["default", "dep:cbindgen"]
default = ["global", "base-mmap", "base-static", "libc"]
global = []
libc = ["dep:libc"]
stat = []
track-valgrind = ["dep:crabgrind"]

[dependencies]
crabgrind = {version = "=0.1.9", optional = true}
libc = {version = "0.2", optional = true}
region = {version = "3.0", optional = true}

[dev-dependencies]
fastrand = "2.0"

[build-dependencies]
cbindgen = {version = "0.24", optional = true}

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[workspace]
members = ["fuzz"]
resolver = "2"
