[package]
authors = ["Js2xxx <akucxy@163.com>"]
categories = ["memory-management", "no-std", "concurrency"]
description = "A fast & lock-free memory allocator library"
documentation = "https://docs.rs/ferroc"
edition = "2021"
exclude = ["assets"]
homepage = "https://github.com/Js2xxx/ferroc"
keywords = ["allocator", "no_std", "memory", "heap", "lock-free"]
license = "MIT OR Apache-2.0"
name = "ferroc"
repository = "https://github.com/Js2xxx/ferroc"
version = "0.3.0"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
base-mmap = ["dep:memmap2", "dep:libc"]
base-static = []
c = ["default", "dep:cbindgen"]
c-override = ["c"]
default = ["global", "base-mmap", "base-static", "libc"]
error-log = ["dep:log"]
finer-grained = []
global = []
libc = ["dep:libc"]
track-valgrind = ["dep:crabgrind"]

[dependencies]
array-macro = "2.1"
crabgrind = {version = "=0.1.9", optional = true}
libc = {version = "0.2", optional = true}
log = {version = "0.4", optional = true}
memmap2 = {version = "0.9", optional = true}

[dev-dependencies]
ctor = "0.2"
fastrand = "2.0"

[build-dependencies]
cbindgen = {version = "0.26", optional = true}

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[workspace]
members = ["fuzz"]
resolver = "2"
