[package]
edition = "2021"
name = "ferroc-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = {version = "1", features = ["derive"]}
libfuzzer-sys = "0.4"

[dependencies.ferroc]
path = ".."

[[bin]]
bench = false
doc = false
name = "stress"
path = "fuzz_targets/stress.rs"
test = false

[[bin]]
bench = false
doc = false
name = "custom"
path = "fuzz_targets/custom.rs"
test = false
